--- a/package.json
+++ b/package.json
@@ -6,9 +6,40 @@
   "bin": {
     "unified-browser-mcp": "./build/index.js"
   },
+  "main": "./build/index.js",
+  "files": [
+    "build",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsc",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run build"
+  },
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "playwright",
+    "browser-automation",
+    "devtools",
+    "testing",
+    "web-automation",
+    "network-monitoring",
+    "claude",
+    "cursor"
+  ],
+  "author": "msawayda",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/msawayda/unified-browser-mcp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/msawayda/unified-browser-mcp/issues"
+  },
+  "homepage": "https://github.com/msawayda/unified-browser-mcp#readme",
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
